tests/testthat/prod/fail/geo/ows-6c5b16.R
structure(list(method = "GET", url = "geo/ows?service=wfs&version=2.0.0&request=GetFeature&typeName=MarineRegions%3Aeez&filter=%3CFilter%3E&outputFormat=text%2Fcsv", 
    status_code = 400L, headers = structure(list(`Access-Control-Allow-Origin` = "*", 
        `X-Frame-Options` = "SAMEORIGIN", `Content-Encoding` = "gzip", 
        `Content-Type` = "application/xml", `Transfer-Encoding` = "chunked", 
        Date = "Wed, 05 Apr 2023 11:44:00 GMT"), class = "httr2_headers"), 
    body = charToRaw("<?xml version=\"1.0\" encoding=\"UTF-8\"?><ows:ExceptionReport xmlns:xs=\"http://www.w3.org/2001/XMLSchema\" xmlns:ows=\"http://www.opengis.net/ows/1.1\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" version=\"2.0.0\" xsi:schemaLocation=\"http://www.opengis.net/ows/1.1 geo/schemas/ows/1.1.0/owsAll.xsd\">\n<ows:Exception exceptionCode=\"XML getFeature request SAX parsing error\" locator=\"org.geoserver.ows.XmlRequestReader\">\n<ows:ExceptionText>org.xml.sax.SAXParseException; lineNumber: 1; columnNumber: 9; XML document structures must start and end within the same entity.\nXML document structures must start and end within the same entity.</ows:ExceptionText>\n</ows:Exception>\n</ows:ExceptionReport>\n")), class = "httr2_response")
